--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -2,5 +2,5 @@
   "image-build": "0.1.1",
   "success-check": "0.0.4",
   "use-mise": "0.0.1",
-  ".github/workflows/multi-runner-build.yml": "0.1.1"
+  ".github/workflows": "0.1.1"
 }
