chore: revert "chore: configure release-please changelog type"
This reverts commit a1e3d4fcbe82b633df734d6434028f68ac373db8.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,6 +3,7 @@
   "release-type": "simple",
   "include-v-in-tag": true,
   "draft-pull-request": true,
+  "changelog-type": "github",
   "separate-pull-requests": true,
   "always-update": true,
   "packages": {
